add some instruction

--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 #+author: conao3
 #+date: <2020-03-20 Fri>
 
-[[https://github.com/conao3/vue-counter][https://raw.githubusercontent.com/conao3/files/master/blob/headers/png/vue-counter.png]]
-[[https://github.com/conao3/vue-counter/blob/master/LICENSE][https://img.shields.io/github/license/conao3/vue-counter.svg?style=flat-square]]
-[[https://github.com/conao3/vue-counter/releases][https://img.shields.io/github/tag/conao3/vue-counter.svg?style=flat-square]]
-[[https://github.com/conao3/vue-counter/actions][https://img.shields.io/badge/patreon-become%20a%20patron-orange.svg?logo=patreon&style=flat-square]]
+[[https://github.com/conao3/vue-todo][https://raw.githubusercontent.com/conao3/files/master/blob/headers/png/vue-todo.png]]
+[[https://github.com/conao3/vue-todo/blob/master/LICENSE][https://img.shields.io/github/license/conao3/vue-todo.svg?style=flat-square]]
+[[https://github.com/conao3/vue-todo/releases][https://img.shields.io/github/tag/conao3/vue-todo.svg?style=flat-square]]
+[[https://github.com/conao3/vue-todo/actions][https://img.shields.io/badge/patreon-become%20a%20patron-orange.svg?logo=patreon&style=flat-square]]
 [[https://twitter.com/conao_3][https://img.shields.io/badge/twitter-@conao__3-blue.svg?logo=twitter&style=flat-square]]
 [[https://conao3-support.slack.com/join/shared_invite/enQtNjUzMDMxODcyMjE1LWUwMjhiNTU3Yjk3ODIwNzAxMTgwOTkxNmJiN2M4OTZkMWY0NjI4ZTg4MTVlNzcwNDY2ZjVjYmRiZmJjZDU4MDE][https://img.shields.io/badge/chat-on_slack-blue.svg?logo=slack&style=flat-square]]
 
@@ -19,11 +19,16 @@
   - [[#author][Author]]
 
 * Description
-Counter sample program using vue.js.
+Todo sample app using vue.js.
 
-* Install
+[[./imagesss1.png]]
 
 * Usage
+#+begin_src sh
+  npm install -g yarn
+  yarn
+  yarn run serve
+#+end_src
 
 * Information
 ** Community
@@ -39,7 +44,7 @@ We welcome PR!
 #+begin_example
   MIT License
   Copyright (c) Naoya Yamashita - https://conao3.com
-  https://github.com/conao3/vue-counter/blob/master/LICENSE
+  https://github.com/conao3/vue-todo/blob/master/LICENSE
 #+end_example
 
 ** Author
